--- a/reactDemo2/index.html
+++ b/reactDemo2/index.html
@@ -7,10 +7,10 @@
     <script src="../build/react-dom.min.js"></script>
     <script src="../build/browser.min.js"></script>
     <script src="../build/jquery-1.8.2.min.js"></script>
-    <script src="index.js" type="text/babel"></script>
+    <script src="like.js" type="text/babel"></script>
     <link rel="stylesheet" href="../build/bootstrap.css">
 </head>
 <body>
-    <div id="content"></div>
+    <div id="example"></div>
 </body>
 </html>
