--- a/reactDemo2/index.html
+++ b/reactDemo2/index.html
@@ -5,12 +5,13 @@
     <title>Title</title>
     <script src="../build/react.min.js"></script>
     <script src="../build/react-dom.min.js"></script>
+    <script src="../build/react-with-addons.min.js"></script>
     <script src="../build/browser.min.js"></script>
     <script src="../build/jquery-1.8.2.min.js"></script>
     <link rel="stylesheet" href="../build/bootstrap.css">
 </head>
 <body>
     <div id="example"></div>
-    <script src="zoom.js" type="text/babel"></script>
+    <script src="valueLink.js" type="text/babel"></script>
 </body>
 </html>
